--- a/static/css/main.css
+++ b/static/css/main.css
@@ -223,15 +223,26 @@ nav > ul {
     border-bottom: 1px solid #e52e71 !important;
 }
 
-/* Popular cards row */
-.popular-articles {}
+/* Styling for the popular articles row as a whole */
+
+.popular-articles {
+    padding: 2rem 0px 2rem 0px;
+    margin: 0px 0px 5rem 0px;
+    overflow: scroll auto;
+    box-sizing: border-box;
+    width: calc(100vw - 71px);
+
+}
+
+/* Popular this month header */
 
 .popular-header-card {
     background-image: linear-gradient(0deg, #ff8a00, #e52e71);
     position: relative;
     border-radius: 16px;
     padding: 2rem;
-    margin: 0 4rem 0 0;
+    margin: 3rem 0px 3rem 0px;
+    position: relative;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -250,43 +261,43 @@ nav > ul {
     font-weight: 700;
 }
 
+/* Card grid styling */
+
 .cards-grid {
     padding: 3rem;
     display: flex;
     margin-left: 1rem;
+    box-sizing: border-box;
+    overflow-x: scroll;
 }
 
-.cards-grid .card {
-    flex: 1;
-    transition: all 0.3s ease-in-out;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
-}
+/* Individual article cards styling */
 
-.cards-grid .card: hover,
-.cards-grid .card: focus {
-    transform: translateY(-1rem);
-    outline: none;
-}
-
-.cards-grid .card: hover ~ .cards,
-.cards-grid .card: focus ~ .cards {
-    transform: translateX(11rem);
-}
-
-
-/* .cards {
-    float: left;
-    display: inline;
-    width: 20%;
+.cards {
     position: relative;
-    border: 1px solid #201c29;
-} */
+    display: flex;
+    clear: both;
+    transition: all 0.2s ease 0s;
+    box-sizing: border-box;
+    box-shadow: rgb(0, 0, 0) -1rem 0px 3rem;
+    margin: 0px 0px 0px 0px;
+    min-width: 300px;
+    min-height: 350px;
+    flex-direction: column;
+}
 
 .cards h2 {
     font-size: 20px;
     font-weight: 700;
+    line-height: 20px;
+    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
+    display: inline-block;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.cards h2:hover {
+    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
 }
 
 .cards aside {
@@ -294,68 +305,54 @@ nav > ul {
     margin: 0 0 1rem;
 }
 
-.cards {
-    position: relative;
-    min-width: 300px;
-    min-height: 350px;
-    padding: 1.5rem;
-    border-radius: 16px;
-    background: #17141d;
-    box-shadow: -1rem 0 3rem #000;
-    display: flex;
-    flex-direction: column;
-    transition: .2s;
-    margin: 0;
-    float: left;
-    width: 10%;
-    padding: 0 10px;
+.cards:hover {
+    transform: translateY(-1rem);
 }
 
-@media(max-width:1200px) {
-    .cards {
-        min-width: 220px
-    }
+/* Big articles */
 
-    /* Big articles */
+.big-articles {
+    padding-bottom: 2rem;
+}
 
-    .big-articles {
-        padding-bottom: 2rem;
-    }
+.big-article header {}
 
-    .big-article header {}
+.big-article h2 {
+    font-size: 32px;
+    font-weight: 700;
+}
 
-    .big-article h2 {
-        font-size: 32px;
-        font-weight: 700;
-    }
+.big-article h2:hover {
+    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
+}
 
-    .big-article p {
-        font-size: 16px;
-    }
+.big-article p {
+    font-size: 16px;
+}
 
+.bigger-articles {
+    border: 1px solid #201c29;
+}
+
+@media screen and (max-width: 600px) {
     .bigger-articles {
-        border: 1px solid #201c29;
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
     }
 
-    @media screen and (max-width: 600px) {
-        .bigger-articles {
-            width: 100%;
-            display: block;
-            margin-bottom: 20px;
-        }
+    .keep-browsing {
+        background-image: linear-gradient(0deg, #ff8a00, #e52e71);
+        position: relative;
+        border-radius: 16px;
+        padding: 0.5rem;
+        margin: 0 4rem 0 0;
+        display: flex;
+        flex-direction: column;
+    }
 
-        .keep-browsing {
-            background-image: linear-gradient(0deg, #ff8a00, #e52e71);
-            position: relative;
-            border-radius: 16px;
-            padding: 0.5rem;
-            margin: 0 4rem 0 0;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .keep-browsing h2 {
-            font-size: 25px;
-            font-weight: 700;
-            text-align: center;
-        }
+    .keep-browsing h2 {
+        font-size: 25px;
+        font-weight: 700;
+        text-align: center;
+    }
