--- a/static/css/main.css
+++ b/static/css/main.css
@@ -158,7 +158,7 @@ html {
 
 html {
     color: white;
-    font-family: "Rubik";
+    font-family: "Rubik", sans-serif;
 }
 
 /* Logo */
@@ -178,12 +178,18 @@ html {
 
 nav ul li {
     margin-left: 2rem;
+    display: inline-block;
+    float: left;
 }
 
 nav > ul {
+    margin: 0 auto;
+    padding: 0;
+    height: 118px;
     display: flex;
     align-items: center;
     position: static;
+
 }
 
 .site-header {
@@ -195,6 +201,7 @@ nav > ul {
     z-index: 1000;
     background: #100e17;
     border-bottom: 1px solid #201c29;
+    box-sizing: border-box;
 }
 
 /* Hero Article */
@@ -204,6 +211,8 @@ nav > ul {
     display: grid;
     font-size: 20px;
     margin-bottom: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     padding-top: 2rem;
 }
 
@@ -220,7 +229,7 @@ nav > ul {
 .read-more {
     background: linear-gradient(90deg, #ff8a00, #e52e71);
     font-weight: 700;
-    border-bottom: 1px solid #e52e71 !important;
+    border-bottom: 1px solid #e52e71;
 }
 
 /* Styling for the popular articles row as a whole */
@@ -241,7 +250,7 @@ nav > ul {
     position: relative;
     border-radius: 16px;
     padding: 2rem;
-    margin: 3rem 0px 3rem 0px;
+    margin: 3rem 0px 1rem 0px;
     position: relative;
     display: flex;
     justify-content: flex-end;
@@ -262,11 +271,10 @@ nav > ul {
 }
 
 /* Card grid styling */
-
+.container,
 .cards-grid {
     padding: 3rem;
     display: flex;
-    margin-left: 1rem;
     box-sizing: border-box;
     overflow-x: scroll;
 }
@@ -280,7 +288,6 @@ nav > ul {
     transition: all 0.2s ease 0s;
     box-sizing: border-box;
     box-shadow: rgb(0, 0, 0) -1rem 0px 3rem;
-    margin: 0px 0px 0px 0px;
     min-width: 300px;
     min-height: 350px;
     flex-direction: column;
@@ -289,20 +296,21 @@ nav > ul {
 .cards h2 {
     font-size: 20px;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 1;
     background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
     display: inline-block;
     cursor: pointer;
     box-sizing: border-box;
+    margin: 1rem;
 }
 
 .cards h2:hover {
     background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
 }
 
-.cards aside {
+.cards figure {
     font-size: 14px;
-    margin: 0 0 1rem;
+    margin: 1rem
 }
 
 .cards:hover {
@@ -311,8 +319,8 @@ nav > ul {
 
 /* Big articles */
 
-.big-articles {
-    padding-bottom: 2rem;
+.big-article {
+    margin-top: 2rem;
 }
 
 .big-article header {}
@@ -320,10 +328,6 @@ nav > ul {
 .big-article h2 {
     font-size: 32px;
     font-weight: 700;
-}
-
-.big-article h2:hover {
-    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
 }
 
 .big-article p {
@@ -338,21 +342,218 @@ nav > ul {
     .bigger-articles {
         width: 100%;
         display: block;
-        margin-bottom: 20px;
+        /*        margin-bottom: 20px;*/
     }
+}
 
-    .keep-browsing {
-        background-image: linear-gradient(0deg, #ff8a00, #e52e71);
-        position: relative;
-        border-radius: 16px;
-        padding: 0.5rem;
-        margin: 0 4rem 0 0;
-        display: flex;
-        flex-direction: column;
-    }
+.keep-browsing {
+    background-image: linear-gradient(0deg, #ff8a00, #e52e71);
+    position: relative;
+    border-radius: 16px;
+    padding: 0.5rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+}
 
-    .keep-browsing h2 {
-        font-size: 25px;
-        font-weight: 700;
-        text-align: center;
-    }
+.keep-browsing h2 {
+    font-size: 25px;
+    font-weight: 700;
+    text-align: center;
+}
+
+footer > h2 {
+    font-size: 2rem;
+    letter-spacing: -0.03rem;
+    line-height: 1;
+    text-align: center;
+    font-weight: 700;
+    box-sizing: border-box;
+    margin-top: 2rem;
+}
+
+footer > p {
+    font-size: 17.6px;
+    line-height: 29.92px;
+    text-align: center;
+    margin: 0px auto 1rem auto;
+    box-sizing: border-box;
+    color: rgb(177, 177, 177);
+    margin-top: 2rem
+}
+
+.small-text {
+    font-size: 14px;
+}
+
+#form-wrap {
+    font-size: 17.6px;
+    line-height: 29.92px;
+    text-align: center;
+    box-sizing: border-box;
+    display: block;
+}
+
+#newsletter-email {
+    font-family: monospace;
+    font-size: 100%;
+    border: 1px solid rgb(204, 204, 204);
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    margin: 0px 0.5rem 0px 0px;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+
+#subscribe-button {
+    font-family: inherit;
+    font-size: 100%;
+    font-weight: 700;
+    line-height: 1.4;
+    background-color: rgb(239, 239, 239);
+    background-image: linear-gradient(to left top, rgb(255, 138, 0), rgb(229, 46, 113)) !important;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    cursor: pointer;
+    transition: all 0.07s ease 0s;
+    border-radius: 8px !important;
+    box-sizing: border-box;
+}
+
+footer > nav {
+    text-align: center;
+    margin: 2rem;
+}
+
+footer > nav > h4 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+footer > nav > a {
+    font-size: 17.6px;
+    color: rgb(177, 177, 177);
+    line-height: 29.92px;
+    display: block;
+
+}
+
+footer > nav > a:hover {
+    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb(229, 46, 113))text;
+}
+
+
+/* Article specific styling */
+
+.header-of-article {}
+
+
+.main-article-content {
+    padding: 4rem 0px 4rem 0px;
+    background-color: white;
+}
+
+.main-article-content.dark {
+    color: #201c29;
+}
+
+.header-content h1 {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin: 2rem;
+}
+
+.header-content p {
+    color: white;
+    margin: 2rem;
+}
+
+/* Dark Mode Styling */
+
+.dark-mode-button {
+    margin-left: 2rem;
+}
+
+.dark-mode,
+.light-mode {
+    font-family: inherit;
+    font-size: 100%;
+    color: white;
+    font-weight: 700;
+    background-color: rgb(239, 239, 239);
+    background-image: linear-gradient(to left top, rgb(255, 138, 0), rgb(229, 46, 113)) !important;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    border-radius: 8px !important;
+    box-sizing: border-box;
+}
+
+.active-mode-message h2 {
+    font-size: 2rem;
+    color: black;
+    font-weight: 700;
+}
+
+.active-mode-message h2.dark {
+    color: white;
+    font-weight: 700;
+}
+
+main.dark {
+    background-color: #201c29;
+}
+
+h3.dark {
+    color: white;
+}
+
+p.dark {
+    color: white;
+}
+
+pre code.dark {
+    background: white;
+}
+
+/* Main content styling */
+
+.article-content h3 {
+    color: black;
+    margin: 2rem;
+    font-weight: 700;
+    font-size: 31.68px;
+    max-width: 70%;
+}
+
+.article-content p {
+    color: black;
+    margin: 2rem;
+    max-width: 70%;
+}
+
+.article-image img {
+    max-width: 70%;
+
+}
+
+p > code {
+    font-family: monospace;
+    font-size: 16px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    padding: .1rem .3rem .2rem;
+    border-radius: .2rem;
+}
+
+pre code {
+    font-family: monospace;
+    background: black;
+    padding: 15px 20px 12px 22px;
+    margin: 2rem 2rem 2rem 2rem;
+    white-space: pre;
+    display: block;
+    overflow-x: scroll;
+    max-width: 70%;
+    min-width: 70px;
+    font-size: 16px;
+    line-height: 1.75;
+    border-radius: 10px;
+}
