--- a/static/css/main.css
+++ b/static/css/main.css
@@ -115,6 +115,12 @@ body {
     padding: 2rem;
 }
 
+@media(max-width:800px) {
+    .page.wrap {
+        padding: 1rem;
+    }
+}
+
 ol,
 ul {
     list-style: none;
@@ -157,8 +163,9 @@ html {
 }
 
 html {
+    font-family: Domine, sans-serif;
     color: white;
-    font-family: "Rubik", sans-serif;
+    line-height: 1.7;
 }
 
 /* Logo */
@@ -204,6 +211,72 @@ nav > ul {
     box-sizing: border-box;
 }
 
+/* Article Meta Info */
+
+.article-meta-info {
+    font-size: .7rem;
+    display: grid;
+    grid-template-columns: 80px min-content min-content;
+    /*    Indeling meta info */
+    grid-template-areas: "avatar author";
+    grid-gap: .25rem 1rem;
+    align-items: center;
+    margin: .9rem 0 1.5rem 0;
+}
+
+.article-date div {
+    margin: 0 0 .5rem 0;
+    display: grid;
+    grid-template-columns: 70px min-content;
+    grid-template-areas: "article date";
+    grid-gap: .1rem;
+    white-space: nowrap;
+}
+
+strong {
+    font-weight: 900;
+}
+
+.date {
+    color: #7a7a8c;
+}
+
+.author-avatar {
+    grid-area: avatar;
+    align-self: start;
+    position: relative;
+    border-radius: 50%;
+}
+
+.author-name {
+    display: block;
+    position: relative;
+}
+
+.author-name-prefix {
+    color: #7a7a8c;
+}
+
+/* Header styling */
+
+h2 a {
+    font-family: Open Sans Bold, sans-serif;
+    font-size: 32px;
+    color: white;
+}
+
+h2 a:hover {
+    background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
+}
+
+
+.article-text p {
+    color: #c2c2c2;
+}
+
 /* Hero Article */
 
 .hero-article {
@@ -211,72 +284,139 @@ nav > ul {
     display: grid;
     font-size: 20px;
     margin-bottom: 4rem;
-    margin-left: 2rem;
     margin-right: 2rem;
     padding-top: 2rem;
 }
 
-.hero-article h1 a {
-    font-size: 32px;
-    font-weight: 700;
-    color: white;
+@media (max-width: 800px) {
+    .hero-article {
+        font-size: 16px;
+    }
 }
 
-.hero-article p {
-    font-size: 16px;
+@media (max-width: 1200px) {
+    .hero-article {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 1085px) {
+    .hero-article {
+        display: block;
+    }
+}
+
+.hero-article h2 a {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.hero-article h2 a:hover {
+    background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
+}
+
+.hero-article {
+    font-family: Domine, sans-serif;
+}
+
+.article-date {
+    margin: 0 0 .5rem 0;
+    display: grid;
+    grid-template-columns: 70px min-content;
+    grid-template-areas: "article date";
+    grid-gap: .1rem;
+    white-space: nowrap;
 }
 
 .read-more {
     background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
     font-weight: 700;
     border-bottom: 1px solid #e52e71;
+}
+
+.read-more:hover {
+    background: white;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
 }
 
 /* Styling for the popular articles row as a whole */
 
 .popular-articles {
-    padding: 2rem 0px 2rem 0px;
-    margin: 0px 0px 5rem 0px;
-    overflow: scroll auto;
+    padding: 2rem 0 2rem 0;
+    margin: 0 0 2rem 0;
     box-sizing: border-box;
-    width: calc(100vw - 71px);
-
+    /*    width: calc(100vw - 71px);*/
 }
 
 /* Popular this month header */
 
 .popular-header-card {
-    background-image: linear-gradient(0deg, #ff8a00, #e52e71);
+    background-image: linear-gradient(180deg, #ff8a00, #e52e71);
     position: relative;
+    width: 320px;
+    height: 350px;
     border-radius: 16px;
     padding: 2rem;
-    margin: 3rem 0px 1rem 0px;
+    /*    margin: 3rem 0px 1rem 0px;
+    */
     position: relative;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
     flex: 0 0 320px;
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
+    writing-mode: horizontal-rl;
 }
 
-.popular-header-card p {
-    margin: 0;
-    font-size: .8rem
+@media(max-width:1200px) {
+    .popular-header-card {
+        -webkit-writing-mode: vertical-rl;
+        -ms-writing-mode: tb-rl;
+        writing-mode: vertical-rl;
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+        -webkit-box-flex: 0;
+        flex: 0;
+        width: 110px;
+        margin-right: 1rem
+    }
 }
 
 .popular-header-card h2 {
+    font-family: Open Sans Bold, sans-serif;
     font-size: 1.6rem;
-    font-weight: 700;
+    color: white;
 }
 
 /* Card grid styling */
-.container,
+
+.container {
+    display: flex;
+    box-sizing: border-box;
+    overflow-x: scroll;
+}
+
 .cards-grid {
     padding: 3rem;
     display: flex;
     box-sizing: border-box;
     overflow-x: scroll;
+}
+
+@media(max-width:800px) {
+
+    .container,
+    .cards-grid {
+        min-width: 190px;
+        padding: 1rem;
+    }
 }
 
 /* Individual article cards styling */
@@ -287,29 +427,46 @@ nav > ul {
     clear: both;
     transition: all 0.2s ease 0s;
     box-sizing: border-box;
-    box-shadow: rgb(0, 0, 0) -1rem 0px 3rem;
+    box-shadow: rgb(0, 0, 0) -1rem 0 3rem;
     min-width: 300px;
     min-height: 350px;
     flex-direction: column;
+    padding: 1.5rem;
+    border-radius: 16px;
 }
 
-.cards h2 {
+@media(max-width:1200px) {
+    .cards {
+        min-width: 220px;
+    }
+}
+
+@media(max-width:800px) {
+    .cards {
+        min-width: 190px;
+    }
+}
+
+.cards h2 a {
     font-size: 20px;
     font-weight: 700;
     line-height: 1;
-    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
+    color: white;
     display: inline-block;
     cursor: pointer;
     box-sizing: border-box;
-    margin: 1rem;
+    margin-top: 1.5rem;
 }
 
-.cards h2:hover {
-    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb (229, 46, 113));
+.cards h2 a:hover {
+    background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
 }
 
 .cards figure {
-    font-size: 14px;
+    font-size: .8rem;
     margin: 1rem
 }
 
@@ -319,15 +476,50 @@ nav > ul {
 
 /* Big articles */
 
+.articles-and-aside-container {
+    display: grid;
+    grid-template-columns: 300px minmax(0, 1fr);
+    grid-gap: 5.33rem;
+}
+
+@media (max-width: 1200px) {
+    .articles-and-aside-container {
+        grid-gap: 4rem;
+    }
+}
+
+@media(max-width: 800px) {
+    .articles-and-aside-container {
+        display: block;
+    }
+}
+
+aside {
+    display: block;
+    font-size:
+}
+
+@media(max-width:800px) {
+    aside {
+        display: none;
+    }
+}
+
 .big-article {
     margin-top: 2rem;
 }
 
-.big-article header {}
-
 .big-article h2 {
+    font-family: inherit;
     font-size: 32px;
     font-weight: 700;
+}
+
+.big-article h2:hover {
+    background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
 }
 
 .big-article p {
@@ -336,14 +528,6 @@ nav > ul {
 
 .bigger-articles {
     border: 1px solid #201c29;
-}
-
-@media screen and (max-width: 600px) {
-    .bigger-articles {
-        width: 100%;
-        display: block;
-        /*        margin-bottom: 20px;*/
-    }
 }
 
 .keep-browsing {
@@ -360,6 +544,12 @@ nav > ul {
     font-size: 25px;
     font-weight: 700;
     text-align: center;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 footer > h2 {
@@ -518,7 +708,7 @@ pre code.dark {
 .article-content h3 {
     color: black;
     margin: 2rem;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 31.68px;
     max-width: 70%;
 }
