--- a/static/css/main.css
+++ b/static/css/main.css
@@ -113,6 +113,8 @@ body {
 
 .page-wrap {
     padding: 2rem;
+    max-width: 1284px;
+    margin: 0 auto;
 }
 
 @media(max-width:800px) {
@@ -163,20 +165,62 @@ html {
 }
 
 html {
-    font-family: Domine, sans-serif;
+    --maxWidth: 1284px;
+    font-family: 'Domine', sans-serif;
     font-weight: 400;
     color: white;
     line-height: 1.7;
-}
-
-/* Logo */
-
-.logo {
-    max-width: 20%;
-    max-height: 20%;
+    overflow-x: hidden;
 }
 
 /* Top header */
+
+.site-header {
+    position: relative;
+    z-index: 1000;
+    display: flex;
+    background: #100e17;
+    border-bottom: 1px solid #201c29;
+    animation: none;
+    box-sizing: border-box;
+}
+
+.site-header .logo {
+    transition: 0s;
+    flex: 0;
+    position: relative;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+}
+
+.site-header .logo,
+.site-header .logo > a {
+    display: flex;
+    align-items: center;
+    padding: 1rem 2rem
+}
+
+.site-header .header-nav {
+    flex: 1;
+}
+
+.site-header .main-nav {
+    height: 100%;
+}
+
+.site-header .main-nav .main-sections {
+    display: flex;
+    height: 100%;
+}
+
+.site-header .main-nav .main-sections > li {
+    flex: 1;
+}
+
+.site-header .main-nav .main-sections > li:first-child a {
+    border-left: 1px solid #201c29;
+}
 
 .site-header .main-nav > ul > li > a {
     padding: 1rem .5rem;
@@ -198,18 +242,6 @@ nav > ul {
     align-items: center;
     position: static;
 
-}
-
-.site-header {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-right: 0;
-    z-index: 1000;
-    background: #100e17;
-    border-bottom: 1px solid #201c29;
-    box-sizing: border-box;
 }
 
 /* Article Meta Info */
@@ -261,7 +293,7 @@ strong {
 /* Header styling */
 
 h2 a {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 32px;
     color: white;
 }
@@ -392,7 +424,7 @@ h2 a:hover {
 }
 
 .header-card-title {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 1.6rem;
     color: white;
 }
@@ -548,13 +580,22 @@ aside {
     text-align: center;
 }
 
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+/* Footer - Newsletter Form */
+
+hr.thick-line {
+    border: 0;
+    height: 5px;
+    background-image: linear-gradient(90deg, #ff8a00, #e52e71);
+    border-radius: 5px;
+    margin: 4rem 0 4rem 0;
 }
 
-footer > h2 {
+.footer-form-container {
+    padding: 2rem 2rem 8rem;
+}
+
+.footer-form-container > h2 {
+    font-family: 'Rubik', sans-serif;
     font-size: 2rem;
     letter-spacing: -0.03rem;
     line-height: 1;
@@ -564,7 +605,7 @@ footer > h2 {
     margin-top: 2rem;
 }
 
-footer > p {
+.footer-form-container > p {
     font-size: 17.6px;
     line-height: 29.92px;
     text-align: center;
@@ -594,6 +635,7 @@ footer > p {
     margin: 0px 0.5rem 0px 0px;
     border-radius: 8px;
     box-sizing: border-box;
+    width: 350px;
 }
 
 #subscribe-button {
@@ -610,33 +652,499 @@ footer > p {
     box-sizing: border-box;
 }
 
-footer > nav {
-    text-align: center;
-    margin: 2rem;
+/* Footer Text & Nav */
+
+.footer-text-nav-container {
+    padding: 2rem 2rem 6rem;
+    display: flex;
+    color: #c2c2c2;
+    align-items: center;
 }
 
-footer > nav > h4 {
+@media (max-width: 800px) {
+    .footer-text-nav-container {
+        flex-wrap: wrap;
+    }
+}
+
+.footer-text {
+    max-width: 700px;
+    margin-right: auto;
+}
+
+.footer-text p {
+    color: #c2c2c2;
+}
+
+.footer-text-nav-container > nav {
+    max-width: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 2rem;
+}
+
+.footer-text-nav-container > nav > h4 {
+    font-family: 'Rubik', sans-serif;
     font-size: 1.5rem;
+    color: white;
     font-weight: 700;
 }
 
-footer > nav > a {
+.footer-text-nav-container > nav > a {
     font-size: 17.6px;
-    color: rgb(177, 177, 177);
+    color: #c2c2c2;
     line-height: 29.92px;
-    display: block;
-
+    width: 50%;
 }
 
-footer > nav > a:hover {
+.footer-text-nav-container > nav > a:hover {
     background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb(229, 46, 113))text;
 }
 
 
-/* Article specific styling */
+/* Main Article specific styling */
 
-.header-of-article {}
+..mega-header {
+    background: #100e17;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    padding: 4rem 2rem 2rem
+}
 
+@media(max-width:800px) {
+    .mega-header {
+        padding: 1rem
+    }
+}
+
+.mega-header-inside {
+    display: grid;
+    grid-template-columns: minmax(200px, 1fr) 300px;
+    grid-gap: 4rem;
+    max-width: var(--maxWidth);
+    margin: 0 auto
+}
+
+@media(max-width:800px) {
+    .mega-header-inside {
+        display: block
+    }
+}
+
+.mega-header-header {
+    position: relative;
+    z-index: 1;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column
+}
+
+.mega-header-author {
+    background: 0 0;
+    overflow: visible;
+    margin: 0 0 2rem
+}
+
+.mega-header-author .avatar {
+    border-radius: 50%
+}
+
+.mega-header-author .author-avatar {
+    grid-area: auto
+}
+
+.mega-header-author .author-avatar img {
+    width: 148px;
+    height: 148px !important;
+    margin: 0 0 22px 27px
+}
+
+.mega-header-author .author-avatar .half-circle {
+    width: 200px;
+    height: 108px
+}
+
+.mega-header-author .mega-header-inside {
+    display: grid !important;
+    grid-template-columns: 200px 1fr;
+    grid-gap: 2rem
+}
+
+@media(max-width:800px) {
+    .mega-header-author .mega-header-inside {
+        grid-template-columns: 100px 1fr;
+        grid-gap: 1rem
+    }
+
+    .mega-header-author .mega-header-inside .author-avatar img {
+        width: 74px;
+        height: 74px !important;
+        margin: 0 0 12px 13px
+    }
+
+    .mega-header-author .mega-header-inside .author-avatar .half-circle {
+        width: 100px;
+        height: 54px
+    }
+}
+
+.author-subhead {
+    font-family: Operator Mono A, Operator Mono B, Source Code Pro, Menlo, Consolas, Monaco, monospace;
+    font-size: .66rem;
+    margin: 0 0 .25rem
+}
+
+.author-bio {
+    color: #da1b60;
+    font-style: italic;
+    font-size: 1.3rem;
+    margin: 0 0 1rem;
+    width: 69%
+}
+
+@media(max-width:800px) {
+    .author-bio {
+        font-size: 1.1rem
+    }
+}
+
+.header-breadcrumbs {
+    font-family: Ringside Regular A, Ringside Regular B, Rubik, Lato, Lucida Grande, Lucida Sans Unicode, Tahoma, Sans-Serif;
+    font-style: normal;
+    font-weight: 700;
+    background: #100e17;
+    padding: 3rem 2rem 1rem
+}
+
+.header-breadcrumbs span {
+    font-size: 18px
+}
+
+.header-breadcrumbs span.breadcrumb-separator {
+    color: #312d3c;
+    font-weight: 700
+}
+
+.header-breadcrumbs span a {
+    color: #7a7a8c;
+    display: inline-block;
+    padding: .25rem
+}
+
+.header-breadcrumbs .breadcrumb_last {
+    display: block
+}
+
+@media(max-width:800px) {
+    .header-breadcrumbs .breadcrumb_last {
+        font-size: 1.8rem
+    }
+}
+
+@media(max-width:1200px) {
+    .header-breadcrumbs {
+        padding: 4rem 2rem 1rem
+    }
+}
+
+@media(max-width:800px) {
+    .header-breadcrumbs {
+        padding: 2rem 1rem 1rem
+    }
+}
+
+@media(max-width:800px) {
+    .header-breadcrumbs-inside span {
+        font-size: 14px
+    }
+}
+
+body.page-template-guide-special-php .header-gradient-content-inside,
+body.post-template-guide-special-php .header-gradient-content-inside,
+body.single-guides .header-gradient-content-inside {
+    -webkit-box-pack: end;
+    justify-content: flex-end
+}
+
+@media(min-width:1200px) {
+
+    body.page-template-guide-special-php .header-gradient-content-inside .sharedaddy,
+    body.post-template-guide-special-php .header-gradient-content-inside .sharedaddy,
+    body.single-guides .header-gradient-content-inside .sharedaddy {
+        padding: 2rem 0
+    }
+}
+
+.header-guides {
+    background: #100e17;
+    color: #fff;
+    position: relative;
+    padding: 2rem 2rem 5.2rem
+}
+
+.header-guides .blob-circle {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    top: -200px;
+    -webkit-transform: rotate(-120deg);
+    transform: rotate(-120deg);
+    right: 100px;
+    left: auto;
+    z-index: 1;
+    display: block
+}
+
+@media(max-width:1200px) {
+    .header-guides .blob-circle {
+        display: none
+    }
+}
+
+.header-guides .article-content-meta {
+    grid-template-areas: "date"
+}
+
+.header-guides .article-comments-meta,
+.header-guides .author-avatar,
+.header-guides .author-name-area {
+    display: none
+}
+
+.header-guides .created {
+    grid-column: 1/2;
+    white-space: nowrap
+}
+
+.header-guides .updated {
+    grid-column: 2/3;
+    white-space: nowrap
+}
+
+@media(max-width:1200px) {
+    .header-guides {
+        padding: 1rem
+    }
+}
+
+.header-guides-inside {
+    position: relative;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    grid-gap: 4rem
+}
+
+@media(max-width:1200px) {
+    .header-guides-inside {
+        display: block
+    }
+}
+
+.guide-sponsor {
+    background: #201c29;
+    color: #a1a1af;
+    padding: 2rem;
+    box-shadow: 0 0 5rem #100e17;
+    position: relative;
+    z-index: 3;
+    border-radius: 1rem;
+    max-width: 600px;
+    position: absolute;
+    bottom: calc(-4rem - 132px);
+    left: 0;
+    display: grid;
+    grid-template-columns: 1fr 110px;
+    grid-gap: 1rem;
+    -webkit-box-align: center;
+    align-items: center
+}
+
+.guide-sponsor h5 {
+    color: #fff
+}
+
+.guide-sponsor p {
+    margin: 0
+}
+
+.guide-sponsor .monthly-sponsor-text {
+    color: #a1a1af;
+    font-size: .7rem
+}
+
+@media(max-width:1200px) {
+    .guide-sponsor {
+        display: none
+    }
+}
+
+.header-with-bottom-gradient {
+    border-bottom-right-radius: 200px;
+    position: relative;
+    z-index: 1
+}
+
+@media(max-width:800px) {
+    .header-with-bottom-gradient {
+        border-bottom-right-radius: 100px
+    }
+}
+
+.header-gradient-after {
+    background-image: -webkit-gradient(linear, left top, right top, from(#ff8a00), to(#e52e71));
+    background-image: linear-gradient(90deg, #ff8a00, #e52e71);
+    position: relative
+}
+
+.header-gradient-content {
+    padding: calc(200px + 1rem) 2rem 0;
+    margin-top: -200px;
+    overflow: hidden
+}
+
+@media(max-width:800px) {
+    .header-gradient-content {
+        padding-left: 1rem;
+        padding-right: 1rem
+    }
+}
+
+.header-gradient-content-inside {
+    max-width: var(--maxWidth);
+    margin: 0 auto;
+    display: -webkit-box;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center
+}
+
+.header-gradient-content-inside .sharedaddy {
+    -webkit-box-ordinal-group: 3;
+    order: 2;
+    padding: 0;
+    margin-bottom: 1rem
+}
+
+.header-gradient-content-inside p a:hover {
+    -webkit-text-fill-color: #201c29 !important
+}
+
+.header-gradient-sponsor {
+    white-space: nowrap
+}
+
+.header-gradient-sponsor p {
+    margin-bottom: 1rem
+}
+
+@media(max-width:800px) {
+    .header-gradient-sponsor {
+        font-size: .9rem
+    }
+}
+
+.article-content-meta {
+    font-size: .7rem;
+    display: grid;
+    grid-template-columns: 80px -webkit-min-content -webkit-min-content;
+    grid-template-columns: 80px min-content min-content;
+    grid-template-areas: "avatar author date comments";
+    grid-gap: .25rem 1rem;
+    -webkit-box-align: center;
+    align-items: center;
+    margin: 0 0 1.5rem
+}
+
+@media(max-width:1200px) {
+    .article-content-meta {
+        grid-template-areas: "avatar author date""avatar comments comments"
+    }
+}
+
+@media(max-width:800px) {
+    .article-content-meta {
+        grid-template-columns: 55px -webkit-min-content -webkit-min-content;
+        grid-template-columns: 55px min-content min-content
+    }
+}
+
+.article-content-meta.article-content-meta-sponsored {
+    grid-template-columns: -webkit-min-content -webkit-min-content;
+    grid-template-columns: min-content min-content;
+    grid-template-areas: "date date"
+}
+
+.hero-article .article-content-meta,
+.module-article .article-content-meta {
+    grid-template-areas: "avatar author comments"
+}
+
+@media(max-width:1200px) {
+
+    .hero-article .article-content-meta,
+    .module-article .article-content-meta {
+        grid-template-areas: "avatar author comments"
+    }
+}
+
+.article-publication-meta {
+    margin: 0 0 .5rem
+}
+
+.article-publication-meta > strong {
+    margin: 0 .3rem 0 0
+}
+
+
+
+.author-avatar {
+    grid-area: avatar;
+    align-self: start;
+    position: relative
+}
+
+.author-avatar img {
+    border-radius: 50%;
+    width: 60px;
+    height: 60px !important;
+    display: block;
+    overflow: hidden;
+    margin: 16px 10px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.author-avatar .half-circle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 56px;
+    fill: none;
+    stroke: url(#orange-to-pink);
+    stroke-width: 8;
+    stroke-linecap: round;
+    pointer-events: none
+}
+
+@media(max-width:800px) {
+    .author-avatar img {
+        width: 35px;
+        height: 35px !important
+    }
+
+    .author-avatar .half-circle {
+        width: 55px;
+        height: 40px
+    }
+}
 
 .main-article-content {
     padding: 4rem 0px 4rem 0px;
@@ -647,11 +1155,10 @@ footer > nav > a:hover {
     color: #201c29;
 }
 
-.header-content h1 {
+.mega-header-inside h1 {
     color: white;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
-    margin: 2rem;
 }
 
 .header-content p {
@@ -708,6 +1215,7 @@ pre code.dark {
 /* Main content styling */
 
 .article-content h3 {
+    font-family: 'Rubik', sans-serif;
     color: black;
     margin: 2rem;
     font-weight: bold;
